--- a/public/css/app.css
+++ b/public/css/app.css
@@ -442,6 +442,10 @@ canvas:active {
   position: relative;
 }
 
+.enter .form--group--submit {
+  padding-top: 45px;
+}
+
 .enter .form--group label {
   position: absolute;
   left: 12px;
@@ -507,5 +511,13 @@ canvas:active {
   border: none;
   border-radius: none;
   font-family: "Poppins";
+  padding: 8px;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 2px white solid;
+  cursor: pointer;
+  width: 100px;
+  color: white;
+  margin-bottom: 35px;
 }
 
