--- a/public/css/app.css
+++ b/public/css/app.css
@@ -247,7 +247,7 @@ h2.tap i {
   top: 49%;
   color: white;
   letter-spacing: 8px;
-  z-index: 4;
+  z-index: 6;
   position: absolute;
   opacity: 0;
   text-transform: uppercase;
@@ -278,6 +278,10 @@ h2.tap i {
   max-width: 500px;
   color: white;
   z-index: 1;
+}
+
+#canvas-container .invitation.active {
+  z-index: 5;
 }
 
 @media (max-width: 1070px) {
